# Vardac

./: .gitignore  .gitlab-ci.yml  CHANGES.md  Dockerfile  Dockerfile.back  Makefile  README.md  TODO.md  Vagrantfile  compspec.opam  docker-compose.yml  dune  dune-project  rename.sh  requirements.sh  requirements.txt  requirements_fuzzing.sh  vagrant_bootstrap.sh  vardac.opam
.tests/: dune
.tests/data/: cdcl_abstract_method.spec  cdcl_method.spec  cexpr_base.spec  protocol1_with_constraints.spec
.tests/examples/0-ping-pong/: pingpong.spec  targets.yml
.tests/examples/1-counter/: targets.yml
.tests/examples/2-ping-pong-intercept/: pingpong.impl  pingpong.spec
.tests/examples/test/: targets.yml
examples/: dune  dune.j2
examples/0-ping-pong/: pingpong.impl  pingpong.spec  places.yml  targets.yml
examples/00-ping-pong-simpl-varda/: pingpong.spec  pingpong.vimpl  targets.yml
examples/01-ping-pong/: targets.yml
examples/1-counter/: counter.impl  counter.spec  counter.varch
examples/2-parent-child-interaction/: pingpong.spec
examples/2-ping-pong-intercept/: pingpong.impl  pingpong.spec  pingpong.varch
examples/3-minimal-simple-kv/: README.md  kv-redis.vimpl  kv-wo-redis.vimpl  kv.impl  kv.spec  kv.varch  kv.vimpl  targets.yml
examples/4-sharded-kv/: kv.impl  kv.spec  kv.varch  targets.yml
examples/kvs/: kvs.spec
examples/test-bridges/: README.md  test.impl  test.spec  test.varch
examples/test-eport/: README.md  targets.yml  test.impl  test.spec  test.varch  test.vimpl
examples/test-error-propagation/: README.md  places.yml  test.impl  test.varch
examples/test-external-internal/: README.md  targets.yml  test.impl  test.varch  test.vimpl
examples/test-grpc/: README.md  test.spec
examples/test-intercept/: README.md  targets.yml  test.varch  test.vimpl
examples/test-playground/: README.md  test.varch
examples/test-plgannot/: README.md  is_well_formed.py  test.impl  test.spec
examples/test-receive-elimination/: counter.impl
examples/test-recvelim/: README.md  test.impl  test.spec  test.varch
examples/test-recvelim-return/: README.md  test.varch
examples/test-simpl-inline/: README.md  targets.yml  test.varch  test.vimpl
examples/test-split-stage-laststage/: README.md  counter.spec  targets.yml
examples/test-variable-state-constexpr/: README.md  test.spec  test.varch
fuzz/: dune  fuzz_me.ml
src/cli/: build.sh  compspec.ml  dune  vardac.ml
src/codegen/: CookTarget.ml  ParseTarget.ml  RawTarget.ml  Target.ml  codegen.ml  codegen.mli  dune  factory.ml  factory.mli  plugin.ml  registration.ml  split.ml  split.mli
src/codegen/.AkkaJava/: .dune  .dune-project  Akka2JavaCompilationPass.ml  AkkaJava.ml  Plug.ml  Plug.mli
src/codegen/.AkkaJava/akka/: Finish.mli  GuardTransform.ml  IRI2AstCompilationPass.ml  dune  encode.ml
src/codegen/.AkkaJava/java/: Clean.ml  dune
src/codegen/plg/: ExternalsHelper.ml  Plugin.ml  S_AST.ml  TemplatesHelper.ml  dune  interface_factory.ml  interface_plugin.ml
src/codegen/plugin2/: dune  dune-project  plugin2_impl.ml
src/codegen/plugins/: Akka2JavaCompilationPass.ml  AkkaJava.ml  AkkaJava.mli  Plugin.ml  dune
src/codegen/plugins/akka/: Ast.ml  Finish.ml  Finish.mli  FutureElim.ml  GuardTransform.ml  GuardTransform.mli  PlgBuiltin.ml  Prepare.ml  akka.ml  dune  encode.ml  interface_factory.ml  interface_plugin.ml  interfaces.ml  misc.ml
src/codegen/plugins/java/: Ast.ml  AstCompilationPass.ml  Clean.ml  Clean.mli  HumanReadable.ml  HumanReadable.mli  JavaUtils.ml  Output.ml  (+3 more)
src/commsimpl/: BranchElimination.ml  RecvElimination.ml  Utils.ml  commsimpl.ml  commsimpl.mli  dune
src/compspeclib/: compspeclib.ml  dune
src/core/: AstUtils.ml  AstUtils2.ml  Atom.ml  Atom.mli  AtomDeBruijn.ml  Builtin.ml  Builtin.mli  Clean.ml  CompilationPass.ml  Config.ml  DeBruijn.ml  DeBruijn.mli  DeBruijnAtom.ml  Error.ml  Error.mli  EventAutoBoxing.ml  IR.ml  IRCompilationPass.ml  IRD.ml  IRI.ml  IRMisc.ml  IRMisc.mli  IR_common.ml  IR_template.ml  IR_utils.ml  IR_utils.mli  Impl.ml  Impl_common.ml  ImplicitElimination.ml  Label.ml  PartialEval.ml  PartialEval.mli  Place.ml  RecvElimination.ml  Reduce.ml  Reduce.mli  Reflexivity.ml  Rewrite.ml  Rewrite.mli  Target.ml  (+11 more)
src/frontend/: Ast.ml  Ast2IRCompilationPass.ml  Ast2ImplCompilationPass.ml  Ast_impl.ml  Cook.ml  Cook.mli  CookImpl.ml  CookImpl.mli  CookPlace.ml  CookTarget.ml  CookTarget.mli  Frontend.ml  Impl.ml  Lexer.mll  Main.ml  PairedAnnotation.ml  PairedImpl.ml  PairedImpl.mli  Parse.ml  ParseImpl.ml  ParsePlace.ml  ParsePlace.mli  ParseTarget.ml  ParseTarget.mli  Parser.mly  RawTarget.ml  Reduce.ml  Reduce.mli  Resolve.ml  Resolve.mli  Test.ml  common.mly  dune  impl.mly  tokens.mly  utils.mly
src/main/common/: ClassicalAutoBoxing.ml  Clean.ml  EventAutoBoxing.ml  ImplicitElimination.ml  InlineElim.ml  PartialEval.ml  PartialEval.mli  Reduce.ml  Reduce.mli  Reflexivity.ml  Sanitiser.ml  TypeChecking.ml  TypeChecking.mli  TypeInference.ml  TypeInference.mli  TypingUtils.ml  TypingUtils.mli  UntypedCleansing.ml  UntypedCleansing.mli  dune  topology.ml
src/main/core/: AstUtils.ml  AstUtils2.ml  Atom.ml  Atom.mli  CommonUtils.ml  CompilationPass.ml  Config.ml  Env.ml  Error.ml  Error.mli  IR.ml  IRI.ml  IRICompilationPass.ml  IRMisc.ml  IRMisc.mli  IR_common.ml  IR_template.ml  Label.ml  SerializationUtils.ml  Target.ml  Utils.ml  collections.ml  dune  testutils.ml  unittests.ml
src/main/intercept/: ContextElimination.ml  ContextElimination.mli  Intercept.ml  Intercept.mli  InterceptUtils.ml  InterceptionElimination.ml  dune
src/statistic/: Statistic.ml  dune
src/vardaclib/: dune  vardaclib.ml
tests/: api.ml  dune  dune.j2  example.ml  main.ml  parser.ml  utils.ml
tests/data/: cdcl_abstract_method.spec  cdcl_abstract_method.varch  cdcl_contract.spec  cdcl_method.spec  cdcl_port.spec  cdcl_port.varch  cdcl_state.spec  cdcl_state.varch  cexpr_base.varch  chandcl_base.spec  dune  dune.j2  protocol1.spec  protocol1_with_constraints.spec
tests/examples/0-slides-ping-pong-async-multicast/: pingpong.spec
tests/examples/kvs/: kvs.impl  kvs.spec
(+339 files in other folders)
