(lang dune 2.8)
(using dune_site 0.1)
(name vardac)

(using menhir 2.1)

(generate_opam_files true)

(source (github severus21/vardac))
(license CECILL-2.1)
(authors "Laurent Prosperi")
(maintainers "laurent.prosperi@inria.fr")
(package
 (name vardac)
 (synopsis "TODO")
 (description "TODO")
 (depends
  (bisect_ppx (>= 2.7.0))
  (bos (>= 0.2.0))
  (dune (>= 2.9.1))
  (dune-site (>= 2.9.1))
  (dune-release (>= 1.5.2))
  (easy_logging (>= 0.8.2))
  (fieldslib (>= v0.14.0))
  (fileutils (>= 0.6.3))
  (jingoo (>= 1.4.4))
  (menhir (>= 2.1))
  (ocaml (>= 4.12.0))
  (ocamlgraph (>= 2.0.0))
  (odoc (>= 2.0.2))
  (ounit2 (>= 2.2.4))
  (pprint (>= 20220103))
  (ppx_deriving (>= 5.2.1))
  (ppx_fields_conv (>= v0.14.2))
  (ppx_hash (>= v0.14.0))
  (ppx_compare (>= v0.15.0))
  (ppx_import (>= 1.9.0))
  (process (>= 0.2.1))
  (rresult (>= 0.6.0))
  (yaml (>= 3.0.0))
 )
 (sites 
  (share test_dataset) 
  (share test_examples) 
  (share externals) 
  (share templates) 
  (share akka_interfaces_grpc_externals) 
  (share akka_interfaces_grpc_templates))
)
