(data_only_dirs examples data)
;; TODO FIXME examples/*/*.... if any (nothing is working with dune) or generate the dune files
(test
 (name main)
 (action (run %{test} --long))
 (deps
  (glob_files data/*.spec)
     (glob_files examples/test/README.md)
     (glob_files examples/test/places.yml)
     (glob_files examples/test/targets.yml)
     (glob_files examples/test/templates/Akka<Java>/auto/docker-compose.yml.j2)
     (glob_files examples/test/counter.impl)
     (glob_files examples/test/counter.spec)
     (glob_files examples/0-ping-pong/README.md)
     (glob_files examples/0-ping-pong/places.yml)
     (glob_files examples/0-ping-pong/targets.yml)
     (glob_files examples/0-ping-pong/templates/Akka<Java>/auto/docker-compose.yml.j2)
     (glob_files examples/0-ping-pong/pingpong.spec)
     (glob_files examples/0-ping-pong/pingpong.impl)
     (glob_files examples/1-counter/README.md)
     (glob_files examples/1-counter/places.yml)
     (glob_files examples/1-counter/targets.yml)
     (glob_files examples/1-counter/templates/Akka<Java>/auto/docker-compose.yml.j2)
     (glob_files examples/1-counter/counter.impl)
     (glob_files examples/1-counter/counter.spec)
     (glob_files examples/2-ping-pong-intercept/README.md)
     (glob_files examples/2-ping-pong-intercept/places.yml)
     (glob_files examples/2-ping-pong-intercept/targets.yml)
     (glob_files examples/2-ping-pong-intercept/templates/Akka<Java>/auto/docker-compose.yml.j2)
     (glob_files examples/2-ping-pong-intercept/pingpong.spec)
     (glob_files examples/2-ping-pong-intercept/pingpong.impl)
    
 )
 (libraries compspec.core compspec.frontend compspec.compspeclib ounit2))