(install
 (section (site (compspec test_examples)))
  (files 
    (01-ping-pong/README.md as 01-ping-pong/README.md)
    (01-ping-pong/places.yml as 01-ping-pong/places.yml)
    (01-ping-pong/targets.yml as 01-ping-pong/targets.yml)
    (01-ping-pong/templates/Akka<Java>/auto/docker-compose.yml.j2 as 01-ping-pong/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (01-ping-pong/pingpong.spec as 01-ping-pong/pingpong.spec)
    (01-ping-pong/pingpong.impl as 01-ping-pong/pingpong.impl)
    (test/README.md as test/README.md)
    (test/places.yml as test/places.yml)
    (test/targets.yml as test/targets.yml)
    (test/templates/Akka<Java>/auto/docker-compose.yml.j2 as test/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test/counter.impl as test/counter.impl)
    (test/counter.spec as test/counter.spec)
    (4-sharded-kv/README.md as 4-sharded-kv/README.md)
    (4-sharded-kv/kv.spec as 4-sharded-kv/kv.spec)
    (4-sharded-kv/places.yml as 4-sharded-kv/places.yml)
    (4-sharded-kv/targets.yml as 4-sharded-kv/targets.yml)
    (4-sharded-kv/templates/Akka<Java>/auto/docker-compose.yml.j2 as 4-sharded-kv/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (4-sharded-kv/kv.impl as 4-sharded-kv/kv.impl)
    (1-counter/README.md as 1-counter/README.md)
    (1-counter/places.yml as 1-counter/places.yml)
    (1-counter/targets.yml as 1-counter/targets.yml)
    (1-counter/templates/Akka<Java>/auto/docker-compose.yml.j2 as 1-counter/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (1-counter/counter.impl as 1-counter/counter.impl)
    (1-counter/counter.spec as 1-counter/counter.spec)
    (3-minimal-simple-kv/README.md as 3-minimal-simple-kv/README.md)
    (3-minimal-simple-kv/kv.spec as 3-minimal-simple-kv/kv.spec)
    (3-minimal-simple-kv/places.yml as 3-minimal-simple-kv/places.yml)
    (3-minimal-simple-kv/targets.yml as 3-minimal-simple-kv/targets.yml)
    (3-minimal-simple-kv/templates/Akka<Java>/auto/docker-compose.yml.j2 as 3-minimal-simple-kv/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (3-minimal-simple-kv/templates/Akka<Java>/auto/manage.sh.j2 as 3-minimal-simple-kv/templates/Akka<Java>/auto/manage.sh.j2)
    (3-minimal-simple-kv/kv.impl as 3-minimal-simple-kv/kv.impl)
    (2-ping-pong-intercept/README.md as 2-ping-pong-intercept/README.md)
    (2-ping-pong-intercept/places.yml as 2-ping-pong-intercept/places.yml)
    (2-ping-pong-intercept/targets.yml as 2-ping-pong-intercept/targets.yml)
    (2-ping-pong-intercept/templates/Akka<Java>/auto/docker-compose.yml.j2 as 2-ping-pong-intercept/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (2-ping-pong-intercept/pingpong.spec as 2-ping-pong-intercept/pingpong.spec)
    (2-ping-pong-intercept/pingpong.impl as 2-ping-pong-intercept/pingpong.impl)
    (00-ping-pong-simpl-varda/README.md as 00-ping-pong-simpl-varda/README.md)
    (00-ping-pong-simpl-varda/places.yml as 00-ping-pong-simpl-varda/places.yml)
    (00-ping-pong-simpl-varda/targets.yml as 00-ping-pong-simpl-varda/targets.yml)
    (00-ping-pong-simpl-varda/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java as 00-ping-pong-simpl-varda/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java)
    (00-ping-pong-simpl-varda/templates/Akka<Java>/auto/docker-compose.yml.j2 as 00-ping-pong-simpl-varda/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (00-ping-pong-simpl-varda/pingpong.spec as 00-ping-pong-simpl-varda/pingpong.spec)
    (00-ping-pong-simpl-varda/pingpong.impl as 00-ping-pong-simpl-varda/pingpong.impl)
   
  )
)