(install
 (section (site (compspec test_examples)))
  (files 
    (test-error-propagation/README.md as test-error-propagation/README.md)
    (test-error-propagation/places.yml as test-error-propagation/places.yml)
    (test-error-propagation/targets.yml as test-error-propagation/targets.yml)
    (test-error-propagation/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java as test-error-propagation/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java)
    (test-error-propagation/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-error-propagation/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-error-propagation/test.spec as test-error-propagation/test.spec)
    (test-error-propagation/test.impl as test-error-propagation/test.impl)
    (01-ping-pong/README.md as 01-ping-pong/README.md)
    (01-ping-pong/places.yml as 01-ping-pong/places.yml)
    (01-ping-pong/targets.yml as 01-ping-pong/targets.yml)
    (01-ping-pong/templates/Akka<Java>/auto/docker-compose.yml.j2 as 01-ping-pong/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (01-ping-pong/pingpong.spec as 01-ping-pong/pingpong.spec)
    (01-ping-pong/pingpong.impl as 01-ping-pong/pingpong.impl)
    (test-eport/README.md as test-eport/README.md)
    (test-eport/places.yml as test-eport/places.yml)
    (test-eport/targets.yml as test-eport/targets.yml)
    (test-eport/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-eport/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-eport/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-eport/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-eport/test.spec as test-eport/test.spec)
    (test-eport/test.impl as test-eport/test.impl)
    (test-plgannot/README.md as test-plgannot/README.md)
    (test-plgannot/places.yml as test-plgannot/places.yml)
    (test-plgannot/is_well_formed.py as test-plgannot/is_well_formed.py)
    (test-plgannot/targets.yml as test-plgannot/targets.yml)
    (test-plgannot/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-plgannot/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-plgannot/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-plgannot/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-plgannot/test.spec as test-plgannot/test.spec)
    (test-plgannot/test.impl as test-plgannot/test.impl)
    (test-external-internal/README.md as test-external-internal/README.md)
    (test-external-internal/places.yml as test-external-internal/places.yml)
    (test-external-internal/targets.yml as test-external-internal/targets.yml)
    (test-external-internal/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2 as test-external-internal/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2)
    (test-external-internal/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-external-internal/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-external-internal/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-external-internal/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-external-internal/test.spec as test-external-internal/test.spec)
    (test-external-internal/test.impl as test-external-internal/test.impl)
    (test-split-stage-laststage/README.md as test-split-stage-laststage/README.md)
    (test-split-stage-laststage/places.yml as test-split-stage-laststage/places.yml)
    (test-split-stage-laststage/targets.yml as test-split-stage-laststage/targets.yml)
    (test-split-stage-laststage/counter.impl as test-split-stage-laststage/counter.impl)
    (test-split-stage-laststage/counter.spec as test-split-stage-laststage/counter.spec)
    (4-sharded-kv/README.md as 4-sharded-kv/README.md)
    (4-sharded-kv/kv.spec as 4-sharded-kv/kv.spec)
    (4-sharded-kv/places.yml as 4-sharded-kv/places.yml)
    (4-sharded-kv/targets.yml as 4-sharded-kv/targets.yml)
    (4-sharded-kv/templates/Akka<Java>/auto/docker-compose.yml.j2 as 4-sharded-kv/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (4-sharded-kv/kv.impl as 4-sharded-kv/kv.impl)
    (1-counter/README.md as 1-counter/README.md)
    (1-counter/places.yml as 1-counter/places.yml)
    (1-counter/targets.yml as 1-counter/targets.yml)
    (1-counter/templates/Akka<Java>/auto/docker-compose.yml.j2 as 1-counter/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (1-counter/counter.impl as 1-counter/counter.impl)
    (1-counter/counter.spec as 1-counter/counter.spec)
    (test-grpc/README.md as test-grpc/README.md)
    (test-grpc/places.yml as test-grpc/places.yml)
    (test-grpc/targets.yml as test-grpc/targets.yml)
    (test-grpc/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2 as test-grpc/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2)
    (test-grpc/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-grpc/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-grpc/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-grpc/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-grpc/test.spec as test-grpc/test.spec)
    (test-grpc/test.impl as test-grpc/test.impl)
    (3-minimal-simple-kv/README.md as 3-minimal-simple-kv/README.md)
    (3-minimal-simple-kv/kv.spec as 3-minimal-simple-kv/kv.spec)
    (3-minimal-simple-kv/places.yml as 3-minimal-simple-kv/places.yml)
    (3-minimal-simple-kv/targets.yml as 3-minimal-simple-kv/targets.yml)
    (3-minimal-simple-kv/templates/Akka<Java>/auto/docker-compose.yml.j2 as 3-minimal-simple-kv/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (3-minimal-simple-kv/templates/Akka<Java>/auto/manage.sh.j2 as 3-minimal-simple-kv/templates/Akka<Java>/auto/manage.sh.j2)
    (3-minimal-simple-kv/kv.impl as 3-minimal-simple-kv/kv.impl)
    (test-variable-state-constexpr/README.md as test-variable-state-constexpr/README.md)
    (test-variable-state-constexpr/places.yml as test-variable-state-constexpr/places.yml)
    (test-variable-state-constexpr/targets.yml as test-variable-state-constexpr/targets.yml)
    (test-variable-state-constexpr/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2 as test-variable-state-constexpr/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2)
    (test-variable-state-constexpr/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-variable-state-constexpr/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-variable-state-constexpr/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-variable-state-constexpr/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-variable-state-constexpr/test.spec as test-variable-state-constexpr/test.spec)
    (test-variable-state-constexpr/test.impl as test-variable-state-constexpr/test.impl)
    (test-bridges/README.md as test-bridges/README.md)
    (test-bridges/places.yml as test-bridges/places.yml)
    (test-bridges/targets.yml as test-bridges/targets.yml)
    (test-bridges/test.spec as test-bridges/test.spec)
    (test-bridges/test.impl as test-bridges/test.impl)
    (2-ping-pong-intercept/README.md as 2-ping-pong-intercept/README.md)
    (2-ping-pong-intercept/places.yml as 2-ping-pong-intercept/places.yml)
    (2-ping-pong-intercept/targets.yml as 2-ping-pong-intercept/targets.yml)
    (2-ping-pong-intercept/templates/Akka<Java>/auto/docker-compose.yml.j2 as 2-ping-pong-intercept/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (2-ping-pong-intercept/pingpong.spec as 2-ping-pong-intercept/pingpong.spec)
    (2-ping-pong-intercept/pingpong.impl as 2-ping-pong-intercept/pingpong.impl)
    (test-recvelim/README.md as test-recvelim/README.md)
    (test-recvelim/places.yml as test-recvelim/places.yml)
    (test-recvelim/targets.yml as test-recvelim/targets.yml)
    (test-recvelim/test.spec as test-recvelim/test.spec)
    (test-recvelim/test.impl as test-recvelim/test.impl)
    (00-ping-pong-simpl-varda/README.md as 00-ping-pong-simpl-varda/README.md)
    (00-ping-pong-simpl-varda/places.yml as 00-ping-pong-simpl-varda/places.yml)
    (00-ping-pong-simpl-varda/targets.yml as 00-ping-pong-simpl-varda/targets.yml)
    (00-ping-pong-simpl-varda/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java as 00-ping-pong-simpl-varda/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java)
    (00-ping-pong-simpl-varda/templates/Akka<Java>/auto/docker-compose.yml.j2 as 00-ping-pong-simpl-varda/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (00-ping-pong-simpl-varda/pingpong.spec as 00-ping-pong-simpl-varda/pingpong.spec)
    (00-ping-pong-simpl-varda/pingpong.impl as 00-ping-pong-simpl-varda/pingpong.impl)
   
  )
)