(install
 (section (site (vardac test_examples)))
  (files 
    (test-intercept/README.md as test-intercept/README.md)
    (test-intercept/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-intercept/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-intercept/test.vimpl as test-intercept/test.vimpl)
    (test-intercept/test.varch as test-intercept/test.varch)
    (test-intercept/places.yml as test-intercept/places.yml)
    (test-intercept/targets.yml as test-intercept/targets.yml)
    (test-recvelim-return/README.md as test-recvelim-return/README.md)
    (test-recvelim-return/test.vimpl as test-recvelim-return/test.vimpl)
    (test-recvelim-return/test.varch as test-recvelim-return/test.varch)
    (test-recvelim-return/places.yml as test-recvelim-return/places.yml)
    (test-recvelim-return/targets.yml as test-recvelim-return/targets.yml)
    (test-simpl-inline/README.md as test-simpl-inline/README.md)
    (test-simpl-inline/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-simpl-inline/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-simpl-inline/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-simpl-inline/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-simpl-inline/test.vimpl as test-simpl-inline/test.vimpl)
    (test-simpl-inline/test.varch as test-simpl-inline/test.varch)
    (test-simpl-inline/places.yml as test-simpl-inline/places.yml)
    (test-simpl-inline/targets.yml as test-simpl-inline/targets.yml)
    (test-grpc/README.md as test-grpc/README.md)
    (test-grpc/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-grpc/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-grpc/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-grpc/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-grpc/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2 as test-grpc/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2)
    (test-grpc/test.vimpl as test-grpc/test.vimpl)
    (test-grpc/test.varch as test-grpc/test.varch)
    (test-grpc/places.yml as test-grpc/places.yml)
    (test-grpc/targets.yml as test-grpc/targets.yml)
    (00-ping-pong-simpl-varda/README.md as 00-ping-pong-simpl-varda/README.md)
    (00-ping-pong-simpl-varda/pingpong.varch as 00-ping-pong-simpl-varda/pingpong.varch)
    (00-ping-pong-simpl-varda/templates/Akka<Java>/auto/docker-compose.yml.j2 as 00-ping-pong-simpl-varda/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (00-ping-pong-simpl-varda/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java as 00-ping-pong-simpl-varda/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java)
    (00-ping-pong-simpl-varda/places.yml as 00-ping-pong-simpl-varda/places.yml)
    (00-ping-pong-simpl-varda/targets.yml as 00-ping-pong-simpl-varda/targets.yml)
    (00-ping-pong-simpl-varda/pingpong.vimpl as 00-ping-pong-simpl-varda/pingpong.vimpl)
    (test-recvelim/README.md as test-recvelim/README.md)
    (test-recvelim/test.vimpl as test-recvelim/test.vimpl)
    (test-recvelim/test.varch as test-recvelim/test.varch)
    (test-recvelim/places.yml as test-recvelim/places.yml)
    (test-recvelim/targets.yml as test-recvelim/targets.yml)
    (3-minimal-simple-kv/README.md as 3-minimal-simple-kv/README.md)
    (3-minimal-simple-kv/templates/Akka<Java>/auto/docker-compose.yml.j2 as 3-minimal-simple-kv/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (3-minimal-simple-kv/templates/Akka<Java>/auto/manage.sh.j2 as 3-minimal-simple-kv/templates/Akka<Java>/auto/manage.sh.j2)
    (3-minimal-simple-kv/kv-redis.vimpl as 3-minimal-simple-kv/kv-redis.vimpl)
    (3-minimal-simple-kv/kv-wo-redis.vimpl as 3-minimal-simple-kv/kv-wo-redis.vimpl)
    (3-minimal-simple-kv/places.yml as 3-minimal-simple-kv/places.yml)
    (3-minimal-simple-kv/targets.yml as 3-minimal-simple-kv/targets.yml)
    (3-minimal-simple-kv/kv.varch as 3-minimal-simple-kv/kv.varch)
    (test-bridges/README.md as test-bridges/README.md)
    (test-bridges/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-bridges/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-bridges/test.vimpl as test-bridges/test.vimpl)
    (test-bridges/test.varch as test-bridges/test.varch)
    (test-bridges/places.yml as test-bridges/places.yml)
    (test-bridges/targets.yml as test-bridges/targets.yml)
    (test-error-propagation/README.md as test-error-propagation/README.md)
    (test-error-propagation/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-error-propagation/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-error-propagation/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java as test-error-propagation/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java)
    (test-error-propagation/test.vimpl as test-error-propagation/test.vimpl)
    (test-error-propagation/test.varch as test-error-propagation/test.varch)
    (test-error-propagation/places.yml as test-error-propagation/places.yml)
    (test-error-propagation/targets.yml as test-error-propagation/targets.yml)
    (test-external-internal/README.md as test-external-internal/README.md)
    (test-external-internal/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-external-internal/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-external-internal/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-external-internal/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-external-internal/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2 as test-external-internal/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2)
    (test-external-internal/test.vimpl as test-external-internal/test.vimpl)
    (test-external-internal/test.varch as test-external-internal/test.varch)
    (test-external-internal/places.yml as test-external-internal/places.yml)
    (test-external-internal/targets.yml as test-external-internal/targets.yml)
    (01-ping-pong/README.md as 01-ping-pong/README.md)
    (01-ping-pong/pingpong.varch as 01-ping-pong/pingpong.varch)
    (01-ping-pong/templates/Akka<Java>/auto/docker-compose.yml.j2 as 01-ping-pong/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (01-ping-pong/places.yml as 01-ping-pong/places.yml)
    (01-ping-pong/targets.yml as 01-ping-pong/targets.yml)
    (01-ping-pong/pingpong.vimpl as 01-ping-pong/pingpong.vimpl)
    (test-plgannot/README.md as test-plgannot/README.md)
    (test-plgannot/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-plgannot/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-plgannot/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-plgannot/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-plgannot/test.vimpl as test-plgannot/test.vimpl)
    (test-plgannot/test.varch as test-plgannot/test.varch)
    (test-plgannot/places.yml as test-plgannot/places.yml)
    (test-plgannot/is_well_formed.py as test-plgannot/is_well_formed.py)
    (test-plgannot/targets.yml as test-plgannot/targets.yml)
    (test-eport/README.md as test-eport/README.md)
    (test-eport/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-eport/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-eport/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-eport/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-eport/test.vimpl as test-eport/test.vimpl)
    (test-eport/test.varch as test-eport/test.varch)
    (test-eport/places.yml as test-eport/places.yml)
    (test-eport/targets.yml as test-eport/targets.yml)
    (test-variable-state-constexpr/README.md as test-variable-state-constexpr/README.md)
    (test-variable-state-constexpr/templates/Akka<Java>/auto/docker-compose.yml.j2 as test-variable-state-constexpr/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (test-variable-state-constexpr/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2 as test-variable-state-constexpr/templates/Akka<Java>/auto/src/test/java/author/project_name/ObservablesTest.java.j2)
    (test-variable-state-constexpr/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2 as test-variable-state-constexpr/templates/Akka<Java>/auto/src/main/java/author/project_name/ConsoleClient.java.j2)
    (test-variable-state-constexpr/test.vimpl as test-variable-state-constexpr/test.vimpl)
    (test-variable-state-constexpr/test.varch as test-variable-state-constexpr/test.varch)
    (test-variable-state-constexpr/places.yml as test-variable-state-constexpr/places.yml)
    (test-variable-state-constexpr/targets.yml as test-variable-state-constexpr/targets.yml)
    (test-split-stage-laststage/counter.vimpl as test-split-stage-laststage/counter.vimpl)
    (test-split-stage-laststage/README.md as test-split-stage-laststage/README.md)
    (test-split-stage-laststage/counter.varch as test-split-stage-laststage/counter.varch)
    (test-split-stage-laststage/places.yml as test-split-stage-laststage/places.yml)
    (test-split-stage-laststage/targets.yml as test-split-stage-laststage/targets.yml)
    (4-sharded-kv/README.md as 4-sharded-kv/README.md)
    (4-sharded-kv/templates/Akka<Java>/auto/docker-compose.yml.j2 as 4-sharded-kv/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (4-sharded-kv/places.yml as 4-sharded-kv/places.yml)
    (4-sharded-kv/kv.vimpl as 4-sharded-kv/kv.vimpl)
    (4-sharded-kv/targets.yml as 4-sharded-kv/targets.yml)
    (4-sharded-kv/kv.varch as 4-sharded-kv/kv.varch)
    (1-counter/counter.vimpl as 1-counter/counter.vimpl)
    (1-counter/README.md as 1-counter/README.md)
    (1-counter/templates/Akka<Java>/auto/docker-compose.yml.j2 as 1-counter/templates/Akka<Java>/auto/docker-compose.yml.j2)
    (1-counter/counter.varch as 1-counter/counter.varch)
    (1-counter/places.yml as 1-counter/places.yml)
    (1-counter/targets.yml as 1-counter/targets.yml)
   
  )
)