(executable
 (name fuzz_me)
 (libraries crowbar vardac.core vardac.vardaclib))

(rule
  (alias fuzz)
  (deps
    (:exe fuzz_me.exe)
    (source_tree inputs))
  (action
    (run afl-fuzz -i inputs -o /tmp/findings -- ./%{exe} @@))
)

(rule 
  (alias bun-fuzz)
  (locks %{project_root}/bun)
  (deps
    (:exe fuzz_me.exe)
    (source_tree input))
  (action
    (run bun --input inputs --output /tmp/findings -- ./%{exe}))
  )

(rule
  (alias bun-fuzz-no-kill)
  (locks %{project_root}/bun)
  (deps
    (:exe fuzz_me.exe)
    (source_tree input))
  (action
    (run timeout --preserve-status 5m bun --no-kill -vv --single-core --input inputs --output /tmp/findings -- ./%{exe}))
)