(executable
    (name vardac)
    (public_name vardac)
    (modes byte native)
    (modules :standard)
    (libraries ounit2 yaml yojson "yaml.unix" "rresult" "fileutils" vardaclib) ;TODO clean libraries
)

(rule
 (target build.ml)
 (deps (universe) build.sh)
 (action
  (with-stdout-to
   %{target}
   (bash "./build.sh"))))