(library
    (name commsimpl)
    (public_name compspec.commsimpl)
    (preprocess (pps ppx_deriving.show ppx_deriving.enum ppx_import ppx_fields_conv))
    (modules :standard)
    (libraries fieldslib ocamlgraph ounit2 yaml easy_logging "yaml.unix" "rresult" "fileutils" process core builtin common)
)
