
;; Constructing the lexer, parser, and executable.

; Compile tokens.mly into a definition of the type [token].
(menhir
  (modules tokens)
  (flags --only-tokens)
)

(ocamllex Lexer)

(menhir
  (modules tokens utils common Parser)
  (merge_into Parser)
  (flags 
    -lg 1 
    -la 1 
    --explain 
    --external-tokens Tokens
  )
)

(menhir
  (modules tokens utils common impl)
  (merge_into Impl)
  (flags 
    -lg 1 
    -la 1 
    --explain 
    --external-tokens Tokens
  )
)

(library
    (name frontend)
    (public_name compspec.frontend)
    (preprocess (pps ppx_deriving.show ppx_import ppx_fields_conv))
    (modules :standard)
    (libraries fieldslib ounit2 yaml "yaml.unix" "rresult" "fileutils" process core)
)