
;; Constructing the lexer, parser, and executable.

; Compile tokens.mly into a definition of the type [token].
(menhir
  (modules tokens)
  (flags --only-tokens)
)

(ocamllex Lexer)

(menhir
  (modules tokens utils common Parser)
  (merge_into Parser)
  (flags 
    -lg 1 
    -la 1 
    --explain 
    --external-tokens Tokens
  )
)

(menhir
  (modules tokens utils common impl)
  (merge_into ImplParser)
  (flags 
    -lg 1 
    -la 1 
    --explain 
    --external-tokens Tokens
  )
)

(library
    (name frontend)
    (public_name vardac.frontend)
    (preprocess (pps ppx_deriving.show ppx_import ppx_fields_conv))
    (modules :standard)
    (libraries fieldslib ounit2 yaml "yaml.unix" "rresult" "fileutils" process main core builtin common)
    (instrumentation (backend bisect_ppx))
)

(generate_sites_module
 (module mysites)
 (sites vardac))