(install
 (section (site (vardac test_dataset)))
  (files 
    (cdcl_state.spec as cdcl_state.spec)
    (protocol1.spec as protocol1.spec)
    (cdcl_port.spec as cdcl_port.spec)
    (cexpr_base.spec as cexpr_base.spec)
    (cdcl_method.spec as cdcl_method.spec)
    (protocol1_with_constraints.spec as protocol1_with_constraints.spec)
    (cdcl_contract.spec as cdcl_contract.spec)
    (cdcl_abstract_method.spec as cdcl_abstract_method.spec)
   
  )
)