
;; Constructing the lexer, parser, and executable.
(library
    (name core)
    (public_name vardac.core)
    (preprocess (pps ppx_deriving.show ppx_deriving.enum ppx_hash ppx_compare ppx_import ppx_fields_conv ppx_deriving_yojson))
    (modules :standard)
    (libraries dune-site fieldslib ocamlgraph ounit2 yaml easy_logging "yaml.unix" "rresult" "fileutils" process yojson ppx_deriving_yojson.runtime)
    (instrumentation (backend bisect_ppx)) 
)

(generate_sites_module
 (module mysites)
 (sites vardac))