(library
    (name intercept)
    (public_name vardac.intercept)
    (preprocess (pps ppx_deriving.show ppx_deriving.enum ppx_hash ppx_compare ppx_import ppx_fields_conv ppx_deriving_yojson))
    (modules :standard)
    (libraries fieldslib ocamlgraph ounit2 yaml easy_logging "yaml.unix" "rresult" "fileutils" process core common)
    (instrumentation (backend bisect_ppx)) 
)
