(library
    (name akka)
    (public_name compspec.codegen.plugins.akka)
    (preprocess (pps ppx_deriving.show ppx_deriving.map ppx_import ppx_fields_conv))
    (modules :standard)
    (libraries fieldslib ounit2 yaml "yaml.unix" "rresult" "fileutils" process compspec.core compspec.builtin plg compspec.codegen.plugins.akka.ast  compspec.codegen.plugins.akka.misc compspec.codegen.plugins.akka.interfaces)
)