(library
    (name interfaces)
    (public_name compspec.codegen.plugins.akka.interfaces)
    (preprocess (pps ppx_deriving.show ppx_deriving.map ppx_import ppx_fields_conv))
    (modules :standard)
    (libraries dune-site jingoo compspec.core compspec.builtin)
)

(generate_sites_module
 (module mysites)
 (sites compspec))