(library
    (name misc)
    (public_name compspec.codegen.plugins.akka.misc)
    (preprocess (pps ppx_deriving.show ppx_deriving.enum ppx_import ppx_fields_conv))
    (modules :standard)
    (libraries ounit2 easy_logging compspec.core compspec.codegen.plugins.akka.ast)
    (instrumentation (backend bisect_ppx)) 
)